--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -23,4 +23,5 @@ r.Shadow.Virtual.Enable=1
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/PuzzlePlatforms")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="PuzzlePlatformsGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="PuzzlePlatformsCharacter")
+bUseFixedFrameRate=True
 
